# synthetic-response-metrics

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/generic_csv_example/: README.md  responses.csv  results.json
examples/interaction_export_example/: README.md  interaction_export.json  results.json
examples/ore_validation/: README.md
examples/ore_validation/controlled_example/: responses.csv  results.json
examples/ore_validation/convergence_scenarios/: high_convergence.csv  high_convergence_results.json  low_convergence.csv  low_convergence_results.json  moderate_convergence.csv  moderate_convergence_results.json
examples/ore_validation/diagnostic_high_convergence/: responses.csv  results.json
examples/ore_validation/platform_generated/: README.md  dataset_card.md  madsynthesis_by_question.csv  madsynthesis_export.csv  madsynthesis_export.jsonl  madsynthesis_metrics.json  madsynthesis_raw_export.json  madsynthesis_summary.csv  madsynthesis_top_pairs.csv  metadata.json  reproducibility_commands.md  verification_notes.md
examples/ore_validation/population_size/: n10.csv  n10_results.json  n3.csv  n3_results.json  n5.csv  n5_results.json
examples/worked_example/: README.md  responses.csv  results.json
src/synthetic_response_metrics/: __init__.py  cli.py  core.py  io.py  normalization.py  validation.py
src/synthetic_response_metrics/metrics/: __init__.py  diversity.py  lexical.py  pairwise.py
tests/: test_core.py  test_io_cli.py
